--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,9 +35,8 @@ jobs:
           
       - name: Commit Generated Code
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
+          git config numanbtt "GitHub Actions"
+          git config numanbtt@gmail.com "actions@github.com"
           git add ./api_client
           git commit -m "Update generated API client"
           git push
-
